[project]
name = "chrony-operator"
version = "0.0.0"
description = "Chrony NTP server charm."
readme = "README.md"
requires-python = ">=3.10"
classifiers = [
  "Programming Language :: Python :: 3 :: Only",
  "Programming Language :: Python :: 3.10",
  "Programming Language :: Python :: 3.11",
  "Programming Language :: Python :: 3.12",
  "Programming Language :: Python :: 3.13",
  "Programming Language :: Python :: 3.14",
]
dependencies = [ "cosl==1.3.1", "cryptography==46.0.3", "jsonschema==4.25.1", "ops==3.3.1", "pydantic==2.12.3" ]

[dependency-groups]
fmt = [ "black", "isort" ]
lint = [
  "black",
  "codespell",
  "cosl==1.3.1",
  "cryptography==46.0.3",
  "isort",
  "jsonschema==4.25.1",
  "mypy",
  "ops==3.3.1",
  "ops[testing]",
  "pep8-naming",
  "pydantic==2.12.3",
  "pytest",
  "pytest-asyncio",
  "pytest-operator",
  "requests",
  "ruff",
  "types-pyyaml",
  "types-requests",
]
unit = [
  "cosl==1.3.1",
  "coverage[toml]",
  "cryptography==46.0.3",
  "jsonschema==4.25.1",
  "ops==3.3.1",
  "ops[testing]",
  "pydantic==2.12.3",
  "pytest",
]
coverage-report = [
  "cosl==1.3.1",
  "coverage[toml]",
  "cryptography==46.0.3",
  "jsonschema==4.25.1",
  "ops==3.3.1",
  "pydantic==2.12.3",
  "pytest",
]
static = [
  "bandit[toml]",
  "cosl==1.3.1",
  "cryptography==46.0.3",
  "jsonschema==4.25.1",
  "ops==3.3.1",
  "pydantic==2.12.3",
]
integration = [
  "allure-pytest>=2.8.18",
  "allure-pytest-collection-report @ git+https://github.com/canonical/data-platform-workflows@v24.0.0#subdirectory=python/pytest_plugins/allure_pytest_collection_report",
  "cosl==1.3.1",
  "cryptography==46.0.3",
  "jsonschema==4.25.1",
  "juju==3.3.1.1",
  "ops==3.3.1",
  "pydantic==2.12.3",
  "pytest",
  "pytest-asyncio",
  "pytest-operator",
  "websockets<14",
]

[tool.uv]
package = false

[tool.black]
line-length = 99
target-version = [ "py310" ]

[tool.ruff]
lint.pydocstyle.convention = "pep257"

[tool.isort]
line_length = 99
profile = "black"

[tool.flake8]
max-line-length = 99
max-doc-length = 99
max-complexity = 10
exclude = [ ".git", "__pycache__", ".tox", "build", "dist", "*.egg_info", "venv" ]
select = [ "E", "W", "F", "C", "N", "R", "D", "H" ]
# Ignore W503, E501 because using black creates errors with this
# Ignore D107 Missing docstring in __init__
ignore = [ "W503", "E501", "D107" ]
# Ignore some rules that conflict with the test docstring format
per-file-ignores = [ "tests/*:D205,D212,D415,DCO010,DCO020,DCO030" ]
docstring-convention = "google"

[tool.pylint]
disable = "wrong-import-order"

[tool.codespell]
skip = "build,lib,venv,icon.svg,.tox,.git,.mypy_cache,.ruff_cache,.coverage,htmlcov,uv.lock"

[tool.pytest.ini_options]
minversion = "6.0"
log_cli_level = "INFO"

# Linting tools configuration

[tool.coverage.run]
branch = true

# Formatting tools configuration
[tool.coverage.report]
show_missing = true

# Linting tools configuration

[tool.mypy]
check_untyped_defs = true
disallow_untyped_defs = true
explicit_package_bases = true
ignore_missing_imports = true
namespace_packages = true

[[tool.mypy.overrides]]
disallow_untyped_defs = false
module = "tests.*"

[tool.bandit]
exclude_dirs = [ "/venv/" ]
[tool.bandit.assert_used]
skips = [ "*/*test.py", "*/test_*.py", "*tests/*.py" ]

# Testing tools configuration
