[project]
name = "chrony-operator"
version = "0.0.0"
description = "Chrony NTP server charm."
readme = "README.md"
requires-python = ">=3.10"
classifiers = [
  "Programming Language :: Python :: 3 :: Only",
  "Programming Language :: Python :: 3.10",
  "Programming Language :: Python :: 3.11",
  "Programming Language :: Python :: 3.12",
  "Programming Language :: Python :: 3.13",
  "Programming Language :: Python :: 3.14",
]
dependencies = [ "cosl==1.3.1", "cryptography==46.0.3", "jsonschema==4.25.1", "ops==3.3.1", "pydantic==2.12.3" ]

[dependency-groups]
fmt = [ "black", "isort" ]
lint = [
  "codespell",
  "cosl==1.3.1",
  "cryptography==46.0.3",
  "jsonschema==4.25.1",
  "mypy",
  "ops==3.3.1",
  "ops[testing]",
  "pep8-naming",
  "pydantic==2.12.3",
  "pytest",
  "pytest-asyncio",
  "pytest-operator",
  "requests",
  "ruff",
  "types-pyyaml",
  "types-requests",
]
unit = [
  "cosl==1.3.1",
  "coverage[toml]",
  "cryptography==46.0.3",
  "jsonschema==4.25.1",
  "ops==3.3.1",
  "ops[testing]",
  "pydantic==2.12.3",
  "pytest",
]
coverage-report = [
  "cosl==1.3.1",
  "coverage[toml]",
  "cryptography==46.0.3",
  "jsonschema==4.25.1",
  "ops==3.3.1",
  "pydantic==2.12.3",
  "pytest",
]
static = [
  "bandit[toml]",
  "cosl==1.3.1",
  "cryptography==46.0.3",
  "jsonschema==4.25.1",
  "ops==3.3.1",
  "pydantic==2.12.3",
]
integration = [
  "allure-pytest>=2.8.18",
  "allure-pytest-collection-report @ git+https://github.com/canonical/data-platform-workflows@v24.0.0#subdirectory=python/pytest_plugins/allure_pytest_collection_report",
  "cosl==1.3.1",
  "cryptography==46.0.3",
  "jsonschema==4.25.1",
  "juju==3.3.1.1",
  "ops==3.3.1",
  "pydantic==2.12.3",
  "pytest",
  "pytest-asyncio",
  "pytest-operator",
  "websockets<14",
]

[tool.uv]
package = false

[tool.ruff]
target-version = "py310"
line-length = 99
exclude = [ "*.egg_info", ".git", ".tox", "__pycache__", "build", "dist", "venv" ]

lint.mccabe.max-complexity = 10
lint.pycodestyle.max-doc-length = 99
lint.pydocstyle.convention = "google"

[tool.codespell]
skip = "build,lib,venv,icon.svg,.tox,.git,.mypy_cache,.ruff_cache,.coverage,htmlcov,uv.lock"

[tool.pytest.ini_options]
minversion = "6.0"
log_cli_level = "INFO"

# Linting tools configuration

[tool.coverage.run]
branch = true

# Formatting tools configuration
[tool.coverage.report]
show_missing = true

# Linting tools configuration

[tool.mypy]
check_untyped_defs = true
disallow_untyped_defs = true
explicit_package_bases = true
ignore_missing_imports = true
namespace_packages = true

[[tool.mypy.overrides]]
disallow_untyped_defs = false
module = "tests.*"

[tool.bandit]
exclude_dirs = [ "/venv/" ]
[tool.bandit.assert_used]
skips = [ "*/*test.py", "*/test_*.py", "*tests/*.py" ]

# Testing tools configuration
